--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -59,7 +59,9 @@
 					<li class="intro" style="font-weight: 400;">Intro Font: Vista Slab Italic</li>
 					<li class="headline" style="">Headline Font: Vista Slab Italic</li>
 				</ul>
-				
+			</section>
+			
+			<section class="atoms-in-line-elements">
 				<h2 class="atoms-sub-heading">In-Line Elements</h2>
 				<hr>
 				<ul class="in-line">
