--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -54,10 +54,10 @@
 				<hr>
 				<ul class="fonts">
 					<li>Body Font Regular: Freight Sans Pro</li>
-					<li style="font-style: italic;">Body Font Italic: Freight Sans Pro</li>
-					<li style="font-weight: 500;">Body Font Bold: Freight Sans Pro</li>
-					<li class="intro" style="font-weight: 400;">Intro Font: Vista Slab Italic</li>
-					<li class="headline" style="">Headline Font: Vista Slab Italic</li>
+					<li class="fonts-italic">Body Font Italic: Freight Sans Pro</li>
+					<li class="fonts-bold">Body Font Bold: Freight Sans Pro</li>
+					<li class="fonts-intro">Intro Font: Vista Slab Italic</li>
+					<li class="fonts-headline">Headline Font: Vista Slab Italic</li>
 				</ul>
 			</section>
 			
@@ -174,7 +174,56 @@
 				</ul>
 			</section>
 			
-			<section class="atoms-fonts">	
+			<section class="atoms-form-inputs">
+				<h2 class="atoms-sub-heading">Form Inputs</h2>
+				<hr>
+				<ul class="form-inputs">
+					<li>
+						<label>Input Button</label>
+						<input type="button">
+					</li>
+					<li>
+						<input type="checkbox">
+					</li>
+					<li>
+						<input type="color">
+					</li>
+					<li>
+						<input type="date">
+					</li>
+					<li>
+						<input type="datetime-local">
+					</li>
+					<li><input type="email"></li>
+					<li><input type="file"></li>
+					<li><input type="hidden"></li>
+					<li><input type="image"></li>
+					<li><input type="month"></li>
+					<li><input type="number"></li>
+					<li><input type="password"></li>
+					<li><input type="radio"></li>
+					<li><input type="range"></li>
+					<li><input type="reset"></li>
+					<li><input type="search"></li>
+					<li><input type="submit"></li>
+					<li><input type="tel"></li>
+					<li><input type="text"></li>
+					<li><input type="time"></li>
+					<li><input type="url"></li>
+					<li><input type="week"></li>
+					<li>
+						<select>
+							<option value="Option One">Option One</option>
+							<option value="Option Two">Option Two</option>
+							<option value="Option Three">Option Three</option>
+							<option value="Option Four">Option Four</option>
+						</select>
+					</li>
+					<li><textarea></textarea></li>
+				</ul>
+			</section>
+			
+			<section class="atoms-icons">	
 				<h2 class="atoms-sub-heading">Icons</h2>
 				<hr>
 				<ul class="icons">
