--- a/_scss/main.css
+++ b/_scss/main.css
@@ -5,6 +5,7 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://use.typekit.net/ueu3gzi.css");
 html {
   line-height: 1.15;
   /* 1 */
