Updating Input Fields

--- a/_layouts/atomic.html
+++ b/_layouts/atomic.html
@@ -179,47 +179,103 @@
 				<hr>
 				<ul class="form-inputs">
 					<li>
-						<label>Input Button</label>
-						<input type="button">
+						<label for="input-button">Input Button</label>
+						<input type="button" name="input-button" id="input-button">
+						<!-- name="input-button" is for MySQL, and id="input-button" is for the label -->
 					</li>
 					<li>
-						<input type="checkbox">
+						<label for="input-checkbox">Input Checkbox</label>
+						<input type="checkbox" name="input-checkbox" id="input-checkbox">
 					</li>
 					<li>
-						<input type="color">
+						<label for="input-color">Input Color</label>
+						<input type="color" name="input-color" id="input-color">
 					</li>
 					<li>
-						<input type="date">
+						<label for="input-date">Input Date</label>
+						<input type="date" name="input-date" id="input-date">
+					</li>
+					<!--<li>
+						<label for="">Input Date & Time Local</label>
+						<input type="datetime-local" name="">
+					</li>-->
+					<!--<li>
+						<label for="">Input Email</label>
+						<input type="email" name="">
+					</li>-->
+					<li>
+						<label for="input-file">Input File</label>
+						<input type="file" name="input-file" id="input-file">
+					</li>
+					<!--<li>
+						<label for="">Input Image</label>
+						<input type="image" name="">
+					</li>-->
+					<!--<li>
+						<label for="">Input Month</label>
+						<input type="month" name="">
+					</li>-->
+					<li>
+						<label for="input-number">Input Number</label>
+						<input type="number" name="input-number" id="input-number">
 					</li>
 					<li>
-						<input type="datetime-local">
+						<label for="input-password">Input Password</label>
+						<input type="password" name="input-password" id="input-password">
 					</li>
-					<li><input type="email"></li>
-					<li><input type="file"></li>
-					<li><input type="hidden"></li>
-					<li><input type="image"></li>
-					<li><input type="month"></li>
-					<li><input type="number"></li>
-					<li><input type="password"></li>
-					<li><input type="radio"></li>
-					<li><input type="range"></li>
-					<li><input type="reset"></li>
-					<li><input type="search"></li>
-					<li><input type="submit"></li>
-					<li><input type="tel"></li>
-					<li><input type="text"></li>
-					<li><input type="time"></li>
-					<li><input type="url"></li>
-					<li><input type="week"></li>
 					<li>
-						<select>
+						<label for="input-radio">Input Radio</label>
+						<input type="radio" name="input-radio" id="input-radio">
+					</li>
+					<li>
+						<label for="input-range">Input Range</label>
+						<input type="range" name="input-range" id="input-range">
+					</li>
+					<li>
+						<label for="input-reset">Input Reset</label>
+						<input type="reset" name="input-reset" id="input-reset">
+					</li>
+					<!--<li>
+						<label for="">Input Search</label>
+						<input type="search" name="">
+					</li>-->
+					<li>
+						<label for="input-submit">Input Submit</label>
+						<input type="submit" name="input-submit" id="input-submit">
+					</li>
+					<!--<li>
+						<label for="">Input Telephone</label>
+						<input type="tel" name="">
+					</li>-->
+					<li>
+						<label for="input-text">Input Text</label>
+						<input type="text" name="input-text" id="input-text">
+					</li>
+					<li>
+						<label for="input-time">Input Time</label>
+						<input type="time" name="input-time" id="input-time">
+					</li>
+					<!--<li>
+						<label for="">Input URL</label>
+						<input type="url" name="">
+					</li>-->
+					<!--<li>
+						<label for="">Input Week</label>
+						<input type="week" name="">
+					</li>-->
+					<li>
+						<label for="select">Select</label>
+						<select name="select" id="select">
 							<option value="Option One">Option One</option>
 							<option value="Option Two">Option Two</option>
 							<option value="Option Three">Option Three</option>
 							<option value="Option Four">Option Four</option>
 						</select>
 					</li>
-					<li><textarea></textarea></li>
+					<li>
+						<label for="text-area">Text Area</label>
+						<textarea name="text-area" id="text-area"></textarea>
+					</li>
 				</ul>
 			</section>
 			
