--- a/atomic/css/_layout.scss
+++ b/atomic/css/_layout.scss
@@ -181,6 +181,11 @@ code {
 			margin-bottom: 0;
 		}
 	}
+	.form-inputs {
+		li {
+			margin-bottom: 1em;
+		}
+	}
 	.icons {
 		list-style-type: none;
 		padding: 0;
