--- a/atomic/css/main.css
+++ b/atomic/css/main.css
@@ -176,6 +176,9 @@ code {
   .atomic .lists h3 {
     margin-bottom: 0; }
 
+.atomic .form-inputs li {
+  margin-bottom: 1em; }
+
 .atomic .icons {
   list-style-type: none;
   padding: 0; }
