--- a/atomic/css/_layout.scss
+++ b/atomic/css/_layout.scss
@@ -64,7 +64,8 @@ code {
 	section {
 		margin-bottom: 4em;
 		.atoms-sub-heading,
-		.molecules-sub-heading {
+		.molecules-sub-heading,
+		.organisms-sub-heading {
 			font-size: 1.5em;
 			margin-bottom: .25em;
 		}
